--- a/style.css
+++ b/style.css
@@ -20,15 +20,11 @@ html {
     display: flex;
     flex-direction: row;
     max-width: 90%;
+    height:150vh;
 }
 
 .list {
     max-width: 25%;
-}
-
-#map {
-    max-width: 100%;
-    max-height: 65%
 }
 
 #selectMiles{
@@ -51,4 +47,51 @@ html {
 
 #filter1 h3 {
     text-align:center;
+}
+
+.left_panel {
+    display: flex;
+    flex-direction: column;
+    max-width: 75%;
+
+}
+
+.filter {
+    max-height: 35%;
+    max-width: 100%;
+}
+
+
+.container {
+    display: flex;
+    flex-direction: row;
+    max-width: 90%;
+    height: 150vh;
+
+}
+
+.list {
+    max-width: 25%;
+}
+
+#map {
+    max-width: 100%;
+    max-height: auto;
+}
+
+.graticule {
+    fill: grey;
+    stroke: lightgrey;
+}
+
+.zip-outline {
+    stroke: lightgrey;
+    stroke-width: .5px;
+    fill: none;
+}
+
+.state-outline {
+    stroke: darkgrey;
+    stroke-width: .5px;
+    fill: green;
 }
