--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ html {
     max-width: 25%;
 }
 
+#header{
+    margin-right:5%;
+}
+
 #selectMiles{
     display: inline-block;
 }
@@ -38,15 +42,37 @@ html {
 
 .filter1child{
     width: 33%;
-    border: 3px solid #f7f7f7
+    border: .5px solid black;
+    border-radius: 15px;
+    padding:1%;
+    margin:2%;
 }
 
 #filter1 h2{
-    font-size: 70px;
+    text-align:center;
+    font-size: 50px;
+    margin:0;
 }
 
 #filter1 h3 {
     text-align:center;
+    margin:0;
+    font-size: 15px;
+    font-weight: normal;
+}
+
+select#selectDistance {
+    margin-right:10px;
+}
+
+#filter2 {
+    display:block;
+    margin-left:10px;
+}
+
+fieldset {
+    border: .5px solid black;
+    border-radius: 15px;
 }
 
 .left_panel {
@@ -81,17 +107,22 @@ html {
 
 .graticule {
     fill: grey;
-    stroke: lightgrey;
+    stroke: white;
 }
 
 .zip-outline {
-    stroke: lightgrey;
+    stroke: white;
     stroke-width: .5px;
     fill: none;
 }
 
 .state-outline {
-    stroke: darkgrey;
+    /* stroke: darkgrey; */
     stroke-width: .5px;
-    fill: green;
+    fill: lightgrey;
+}
+
+.list{
+    border-left: .5px solid black;
+
 }
