--- a/style.css
+++ b/style.css
@@ -41,16 +41,22 @@ html {
     flex-direction:row;
 }
 
-#filter1 button {
-    flex-basis: 90px;
+#filter1 .button {
+    /* flex-basis: 90px;
     flex-grow: 0;
-    flex-shrink: 0;
+    flex-shrink: 0; */
     width:90px;
     height: 110px;
     border: .5px solid black;
     border-radius: 15px;
     padding:1%;
-    margin:2%;   
+    margin:2%;
+    background-color:lightgray; 
+
+}
+
+#filter1 .button:hover {
+    background-color: gray;
 }
 
 #filter1 h2{
