--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 .left_panel {
     display: flex;
     flex-direction: column;
-    max-width: 75%;
+    max-width: 80%;
 }
 
 .filter {
@@ -24,7 +24,7 @@ html {
 }
 
 .list {
-    max-width: 25%;
+    max-width: 20%;
 }
 
 #header{
@@ -126,12 +126,12 @@ fieldset {
     border-radius: 15px;
 }
 
-.left_panel {
+/* .left_panel {
     display: flex;
     flex-direction: column;
     max-width: 75%;
 
-}
+} */
 
 .filter {
     max-height: 35%;
@@ -145,10 +145,6 @@ fieldset {
     max-width: 90%;
     height: 150vh;
 
-}
-
-.list {
-    max-width: 25%;
 }
 
 #map {
